# opencraft

./: CMakeLists.txt  README.md
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
src/: main.cpp
src/Core/: Engine.cpp  Engine.h
src/Render/: Render.h
src/WindowManager/: WindowManager.cpp  WindowManager.h
src/WindowManager/ImguiManager/: ImguiManager.cpp  ImguiManager.h
